Wed Feb 21 01:46:34 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, config/Default: Setup cursor in gdmlogin

Tue Feb 20 13:57:18 2001  George Lebl <jirka@5z.com>

	* config/Default: Idea from peter winnberg <peter@rsub.com>, to set
	  the cursor to left_ptr to be nicer

Mon Feb 19 09:01:56 2001  Yukihiro Nakai <nakai@gnome.gr.jp>

	* gui/gdmconfig.desktop: Add Japanese translation.

Mon Feb 19 21:37:07 2001  George Lebl <jirka@5z.com>

	Patch from Tim Jansen <tim@tjansen.de>

	* docs/C/gdm.sgml:  fixed docs in terms of true/false vs. 1/0 and
	  add new values

	 * gui/gdmlogin.c, gui/gdmchooser.c:  change GdmDebug to gboolean
	   and add some checks for config values

2001-02-19  Christophe Merlet  <redfox@eikonex.org>

	* gui/gdmconfig.desktop: Added French strings.

Mon Feb 19 03:42:01 2001  Jonathan Blandford  <jrb@redhat.com>

	* gui/gdmlogin.c (create_handle): Minor UI cleanup to gdmlogin.

Sun Feb 18 15:05:00 2001  Lee Mallabone <lee0@callnetuk.com>

	* gui/gdmconfig.glade: Improve clarity, and make 'automatic login'
	more noticeable.

Sun Feb 18 11:32:00 2001  Lee Mallabone <lee0@callnetuk.com>

	* gui/gdmconfig.(c|glade): GUI fixes for Xserver clist.

Sat Feb 17 19:08:00 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.(c|glade): Patch from Lee to fix xdmcp options
	  sensitivity, plus make the clist title passive and set it to
	  browse selection mode.

Thu Feb 15 03:18:15 2001  George Lebl <jirka@5z.com>

	* Release 2.0.98.1

Thu Feb 15 03:18:12 2001  George Lebl <jirka@5z.com>

	* configure.in, config/Gnome.in, config/Failsafe.in,
	  config/gdm.conf.in, config/gnomerc.in:  Fix the autogeneration,
	  by including all the prefixes and by expanding the variables.
	  Idea stolen from GConf configure.in

Wed Feb 14 18:53:57 2001  George Lebl <jirka@5z.com>

	* configure.in, config/Makefile.am: Apply patch from peter@ximian.com
	  (Peter Teichman), to generate config files from .in files during
	  configure time, rather then install time
