@@ -1,3 +1,9 @@
+2001-02-27  Gediminas Paulauskas <menesis@delfi.lt>
+
+	* gdmconfig/Makefile.am: removed DLOCALEDIR.
+	* gdmconfig/gdmconfig.c/h: include config.h in c file, not h.
+	i18n fixes, gui now translated.
+
 Wed Feb 21 01:46:34 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmlogin.c, config/Default: Setup cursor in gdmlogin
